@@ -21,6 +21,9 @@
 
 TreeTank 4.13
 -------------
++ Binary incompatibility to previous releases due to stored version info.
++ File now storing whether it is checksummed and encrypted.
++ File now storing the version number of TreeTank with which it was created.
 + Moved Axis classes to axislayer package.
 + Fixed bug with remove() in IWriteTransaction. Now also deleting
   descendants.
